--- a/app/src/main/res/layout/fragment_search_chat.xml
+++ b/app/src/main/res/layout/fragment_search_chat.xml
@@ -7,7 +7,7 @@
     android:focusableInTouchMode="true">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_view"
+        android:id="@+id/rv_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
