--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="21">
 
     <path
-        android:fillColor="#2bce7c"
+        android:fillColor="#64b0ff"
         android:pathData="M18.76,1.32001 L8.25,11.83 L2.89999,6.46997
 C2.45999,6.03998,1.76001,6.03998,1.32001,6.46997
 C0.890015,6.90002,0.890015,7.60999,1.32001,8.03998 L7.45999,14.18
