--- a/app/src/main/res/drawable/switch_unchecked_bg.xml
+++ b/app/src/main/res/drawable/switch_unchecked_bg.xml
@@ -10,5 +10,5 @@
     <path
         android:pathData="M0,10C0,4.477 4.477,0 10,0C15.523,0 20,4.477 20,10C20,15.523 15.523,20 10,20C4.477,20 0,15.523 0,10Z"
         android:fillAlpha="1"
-        android:fillColor="#2bce7c"/>
+        android:fillColor="#64b0ff"/>
 </vector>
