--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -111,9 +111,10 @@
                 android:hint="@string/search_people_for_channel_hint"
                 android:paddingBottom="@dimen/edit_text_bottom_padding" />
 
-            <com.applikey.mattermost.views.SafeButton
+            <com.devspark.robototextview.widget.RobotoCheckedTextView
                 android:id="@+id/btn_add_all"
                 style="@style/Button"
+                android:background="@drawable/bg_button_add_all"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
                 android:layout_gravity="center_horizontal"
@@ -123,8 +124,7 @@
                 android:layout_marginTop="@dimen/normal"
                 android:gravity="center"
                 android:text="@string/button_add_all"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/button_text_size"
+                android:checked="true"
                 android:visibility="visible" />
 
             <android.support.v7.widget.RecyclerView
