--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -40,7 +40,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:singleLine="true"
+            android:lines="1"
             android:text="@string/default_login_text" />
 
         <TextView
