[WIP] refactoring create channel

--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -115,13 +115,14 @@
                 android:id="@+id/btn_add_all"
                 style="@style/Button"
                 android:background="@drawable/bg_button_add_all"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/normal"
                 android:layout_marginTop="@dimen/normal"
+                android:textAlignment="gravity"
                 android:gravity="center"
                 android:text="@string/button_add_all"
                 android:checked="true"
