--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -41,7 +41,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:lines="1"
+            android:ellipsize="end"
             android:text="@string/default_login_text" />
 
         <com.applikey.mattermost.views.SafeButton
