reworked added members panel, create adding

--- a/app/src/main/res/layout/added_people_layout.xml
+++ b/app/src/main/res/layout/added_people_layout.xml
@@ -2,9 +2,10 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:orientation="horizontal"
     tools:parentTag="LinearLayout">
+<!--
 
     <ImageView
         android:id="@+id/first_added"
@@ -68,6 +69,7 @@
             android:textSize="@dimen/added_people_count_textsize"
             android:visibility="gone" />
     </FrameLayout>
+-->
 
 
 </merge>
