--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -95,7 +95,8 @@
             <com.applikey.mattermost.views.AddedPeopleLayout
                 android:id="@+id/added_people_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                app:min_item_right_margin="@dimen/added_people_layout_item_right_margin"
                 android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/normal"
