--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -19,21 +19,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin_fixed_text"
+        android:paddingEnd="@dimen/activity_horizontal_margin_fixed_text"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:id="@+id/tv_email"
             style="@style/TextHeadingSecondary"
-            android:padding = "@dimen/text_heading_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/login_screen_content_margin_top"
+            android:paddingStart="@dimen/edit_text_align"
+            android:paddingEnd="@dimen/edit_text_align"
+            android:layout_alignStart="@+id/et_login"
             android:text="@string/email_capt" />
 
         <EditText
-            android:id="@+id/et_login"
+            android:id="@id/et_login"
             style="@style/EditTextPrimary.PushRight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +49,8 @@
         <com.applikey.mattermost.views.SafeButton
             android:id="@+id/b_restore_password"
             style="@style/Button"
+            android:layout_marginStart="@dimen/edit_text_align"
+            android:layout_marginEnd="@dimen/edit_text_align"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
