--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="activity_horizontal_margin">40dp</dimen>
+    <dimen name="activity_horizontal_margin_fixed_text">36dp</dimen>
     <dimen name="activity_vertical_margin">40dp</dimen>
 
     <dimen name="text_title_size">18sp</dimen>
@@ -9,6 +10,9 @@
     <dimen name="text_heading_padding">8dp</dimen>
     <dimen name="text_primary_button">16sp</dimen>
     <dimen name="settings_element_text_size">18sp</dimen>
+
+    <!-- This attribute allows us pushing elements to align it by edit text vertical text align -->
+    <dimen name="edit_text_align">4dp</dimen>
 
     <dimen name="edit_text_bottom_padding">20dp</dimen>
     <dimen name="edit_text_push_right">4dp</dimen>
