--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -77,8 +77,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:hint="@string/create_channel_description_hint"
                 android:gravity="top|start"
+                android:hint="@string/create_private_group_description_hint"
                 android:inputType="textEmailAddress"
                 app:typeface="roboto_light"/>
 
@@ -95,7 +95,7 @@
             <com.applikey.mattermost.views.AddedPeopleLayout
                 android:id="@+id/added_people_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="@dimen/added_people_layout_item_height"
                 app:min_item_right_margin="@dimen/added_people_layout_item_right_margin"
                 android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
