--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -35,100 +35,99 @@
                 android:id="@+id/channel_type_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/create_channel_type_bottom_margin"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:gravity="center" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                app:typeface="roboto_regular"
-                android:text="@string/create_channel_title_name" />
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:text="@string/create_channel_title_name"
+                app:typeface="roboto_regular" />
 
             <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_channel_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:hint="@string/create_chat_hint_name"
                 android:inputType="textEmailAddress"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                app:typeface="roboto_light"
+                android:lines="1"
                 android:maxLines="1"
-                android:lines="1"/>
+                app:typeface="roboto_light" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                app:typeface="roboto_regular"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
-                android:text="@string/create_channel_description_title" />
+                android:text="@string/create_channel_description_title"
+                app:typeface="roboto_regular" />
 
             <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_channel_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:gravity="top|start"
                 android:hint="@string/create_private_group_description_hint"
                 android:inputType="textEmailAddress"
-                app:typeface="roboto_light"/>
+                app:typeface="roboto_light" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
-                app:typeface="roboto_regular"
-                android:text="@string/add_members" />
+                android:text="@string/add_members"
+                app:typeface="roboto_regular" />
 
             <com.applikey.mattermost.views.AddedPeopleLayout
                 android:id="@+id/added_people_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/added_people_layout_item_height"
-                app:min_item_right_margin="@dimen/added_people_layout_item_right_margin"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/normal"
-                android:layout_marginTop="@dimen/large" />
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginTop="@dimen/large"
+                app:min_item_right_margin="@dimen/added_people_layout_item_right_margin" />
 
             <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_search_people"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:drawableEnd = "@drawable/ic_search"
-                app:typeface="roboto_light"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:drawableEnd="@drawable/ic_search"
                 android:hint="@string/search_people_for_channel_hint"
-                android:paddingBottom="@dimen/edit_text_bottom_padding" />
+                android:paddingBottom="@dimen/edit_text_bottom_padding"
+                app:typeface="roboto_light" />
 
             <com.devspark.robototextview.widget.RobotoCheckedTextView
                 android:id="@+id/btn_add_all"
                 style="@style/Button"
-                android:background="@drawable/bg_button_add_all"
-                android:layout_gravity="center_horizontal"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/normal"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/normal"
-                android:textAlignment="gravity"
+                android:background="@drawable/bg_button_add_all"
+                android:checked="true"
                 android:gravity="center"
                 android:text="@string/button_add_all"
-                android:checked="true"
-                android:visibility="visible" />
+                android:textAlignment="gravity" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_peoples"
