--- a/app/src/main/res/layout/people_new_channel_item.xml
+++ b/app/src/main/res/layout/people_new_channel_item.xml
@@ -2,38 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingTop="@dimen/pending_people_item_top_margin"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
     android:paddingBottom="@dimen/pending_people_item_bottom_margin"
     android:paddingLeft="@dimen/dialog_create_channel_content_padding"
     android:paddingRight="@dimen/dialog_create_channel_content_padding"
-    android:layout_height="wrap_content">
+    android:paddingTop="@dimen/pending_people_item_top_margin">
 
     <ImageView
         android:id="@+id/iv_pending_people_avatar"
         android:layout_width="@dimen/pending_people_avatar_width"
         android:layout_height="@dimen/pending_people_avatar_height"
+        android:layout_gravity="start"
         android:layout_marginEnd="@dimen/normal"
-        tools:background="#AA45CB"
-        android:layout_gravity="start" />
+        tools:background="#AA45CB" />
 
     <com.devspark.robototextview.widget.RobotoTextView
         android:id="@+id/tv_added_member"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        tools:text = "Denis Nikiforov"
-        android:textSize="@dimen/settings_element_text_size" />
+        android:layout_weight="1"
+        android:textSize="@dimen/settings_element_text_size"
+        tools:text="Denis Nikiforov" />
 
     <CheckBox
         android:id="@+id/cb_is_member_added"
-        android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:background="@null"
         android:button="@drawable/bg_pending_member_item"
-        />
+        android:clickable="false" />
 </LinearLayout>
