fixed design bugs

--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -27,6 +27,8 @@
             style="@style/AlertDialog.AppCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+            android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
             android:paddingTop="@dimen/dialog_create_channel_top_padding">
@@ -36,16 +38,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/create_channel_type_bottom_margin"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:gravity="center" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
+                android:layout_marginStart="@dimen/edit_text_align"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:text="@string/create_channel_title_name"
                 app:typeface="roboto_regular" />
 
@@ -53,8 +52,6 @@
                 android:id="@+id/et_channel_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:hint="@string/create_chat_hint_name"
                 android:inputType="textEmailAddress"
                 android:lines="1"
@@ -65,8 +62,7 @@
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/edit_text_align"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
                 android:text="@string/create_channel_description_title"
                 app:typeface="roboto_regular" />
@@ -75,8 +71,6 @@
                 android:id="@+id/et_channel_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:gravity="top|start"
                 android:hint="@string/create_private_group_description_hint"
                 android:inputType="textEmailAddress"
@@ -86,8 +80,7 @@
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginStart="@dimen/edit_text_align"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
                 android:text="@string/add_members"
                 app:typeface="roboto_regular" />
@@ -97,8 +90,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/added_people_layout_item_height"
                 android:layout_marginBottom="@dimen/normal"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/large"
                 app:min_item_right_margin="@dimen/added_people_layout_item_right_margin" />
 
@@ -106,8 +97,6 @@
                 android:id="@+id/et_search_people"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:drawableEnd="@drawable/ic_search"
                 android:hint="@string/search_people_for_channel_hint"
                 android:paddingBottom="@dimen/edit_text_bottom_padding"
@@ -120,8 +109,6 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/normal"
-                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
-                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/normal"
                 android:background="@drawable/bg_button_add_all"
                 android:checked="true"
