--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -24,14 +24,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            style="@style/AlertDialog.AppCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dialog_create_channel_content_offset"
-            android:layout_marginStart="@dimen/dialog_create_channel_content_offset"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
-            android:paddingTop="@dimen/dialog_create_channel_top_padding">
+            android:padding="@dimen/large">
 
             <com.applikey.mattermost.views.ChannelTypeView
                 android:id="@+id/channel_type_view"
@@ -43,8 +40,8 @@
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
-                android:layout_marginStart="@dimen/edit_text_align"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/edit_text_align"
                 android:text="@string/create_channel_title_name"
                 app:typeface="roboto_regular" />
 
