--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -112,4 +112,5 @@
     <dimen name="button_text_size">14sp</dimen>
     <dimen name="button_height">40dp</dimen>
     <dimen name="button_width">180dp</dimen>
+    <dimen name="fragment_search_empty_state_margin_top">100dp</dimen>
 </resources>
