--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -139,7 +139,7 @@
                 android:id="@+id/iv_emoji"
                 style="@style/ImageButton"
                 android:layout_width="wrap_content"
-                app:srcCompat = "@drawable/bg_emoji_button"
+                android:src = "@drawable/bg_emoji_button"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:button="@drawable/ic_emoji"
