--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -28,11 +28,11 @@
             style="@style/TextHeadingSecondary.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et_login"
             android:layout_marginTop="@dimen/login_screen_content_margin_top"
-            android:paddingStart="@dimen/edit_text_align"
             android:paddingEnd="@dimen/edit_text_align"
-            android:text="@string/email_capt"
-            android:layout_alignStart="@+id/et_login" />
+            android:paddingStart="@dimen/edit_text_align"
+            android:text="@string/email_capt" />
 
         <EditText
             android:id="@id/et_login"
@@ -40,10 +40,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_email"
+            android:ellipsize="end"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/default_login_text" />
 
         <TextView
@@ -51,11 +51,11 @@
             style="@style/TextHeadingSecondary.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/et_login"
-            android:paddingStart="@dimen/edit_text_align"
-            android:paddingEnd="@dimen/edit_text_align"
             android:layout_alignStart="@+id/et_password"
+            android:layout_below="@id/et_login"
             android:layout_marginTop="@dimen/margin_default"
+            android:paddingEnd="@dimen/edit_text_align"
+            android:paddingStart="@dimen/edit_text_align"
             android:text="@string/password_capt" />
 
         <EditText
@@ -75,21 +75,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/b_restore_password"
+            android:layout_alignStart="@+id/et_password"
             android:layout_marginTop="@dimen/margin_default"
-            android:text="@string/sign_in"
-            android:layout_alignStart="@+id/et_password" />
-
+            android:text="@string/sign_in" />
 
         <com.applikey.mattermost.views.SafeButton
             android:id="@id/b_restore_password"
             style="@style/BorderlessButton"
-            android:padding="@dimen/button_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/edit_text_align"
             android:layout_marginStart="@dimen/edit_text_align"
-            android:layout_marginEnd="@dimen/edit_text_align" />
+            android:layout_marginTop="@dimen/margin_default"
+            android:padding="@dimen/button_padding"
+            android:text="@string/restore_password_capt" />
 
     </RelativeLayout>
 </RelativeLayout>
