--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -64,14 +64,14 @@
                 android:text="@string/create_channel_description_title"
                 app:typeface="roboto_regular" />
 
-            <com.devspark.robototextview.widget.RobotoEditText
+            <EditText
                 android:id="@+id/et_channel_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="top|start"
                 android:hint="@string/create_private_group_description_hint"
-                android:inputType="textEmailAddress"
-                app:typeface="roboto_light" />
+                android:inputType="textMultiLine"
+                android:typeface="sans" />
 
             <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
